# unmerdify

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/unmerdify/: __init__.py  __main__.py  ftr_config_check.py  site_config.py
tests/: conftest.py  site_config_test.py  test_site_config.py
tests/fixtures_site_config/: .test.com.txt
